--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,11 +10,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       -name: Checkout
-        - uses: actions/checkout@v3
+        uses: actions/checkout@v3
       -name: Setup Nim
-        - uses: jiro4989/setup-nim-action@v1
-          with:
-            nim-version: ${{ env.NIM_VERSION }}
+        uses: jiro4989/setup-nim-action@v1
+        with:
+          nim-version: ${{ env.NIM_VERSION }}
       - name: Build
         run: nimble build -d:release -y
       - name: Create Artifacts
